Fix benchmark with new STS API